--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
-<h1>My Test GitHub Document</h1>
-<p>Some text with a blink for fun.</p>
-<p>Here's <a href=”test.html”>a link</a> to a page.</p>
+    <p>Here is my "goat" branch test.</p>
+    <h1>My Test GitHub Document</h1>
+        <p>Some text with a blink for fun.</p>
+        <p>Here's <a href=”test.html”>a link</a> to a page.</p>
 </html>
